--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,28 @@ body {
     padding: 0;
 }
 
-section#main {
-	min-height: 100vh;
+main#mainApp {
+	height: 89vh;
+	position: relative;
 }
+
+section#main {
+	margin-bottom: 10px;
+}
+
+/*
+ *
+ * Custom Class
+ *
+ */
+ .loading {
+ 	font-family: 'Orbitron', sans-serif;
+ 	letter-spacing: 5px;
+ 	text-align: center;
+ 	background-color: #00000042;
+ 	color: white;
+	padding: 20px 0;
+ }
 
 /*
  *
