--- a/src/container/App.css
+++ b/src/container/App.css
@@ -7,3 +7,11 @@ div#header {
     text-shadow: 5px 14px 12px black;
     color: white;
 }
+
+div.loading > div {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: black;
+}
