--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ section#main {
  	font-family: 'Orbitron', sans-serif;
  	letter-spacing: 5px;
  	text-align: center;
- 	background-color: #00000042;
+ 	background-color: #000000;
  	color: white;
 	padding: 20px 0;
  }
